# djangoRest

./: .gitignore  Dockerfile  README.md  db-deployment.yaml  db-service.yaml  docker-compose.yml  pyproject.toml  pytest.ini  web-deployment.yaml
database/: Dockerfile
djangoRestProject/: asgi.py  settings.py  urls.py  wsgi.py
djangoRestProject/ServiceProviders/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
djangoRestProject/ServiceProviders/migrations/: 0001_initial.py  0002_postgis.py
djangoRestProject/ServiceProviders/test_files/: conftest.py  end_to_end_tests.py  provider_tests.py  service_area_tests.py
